Project

General

Profile

Actions

Fix #46070

closed

client: fix snap directory atime

Added by Luis Henriques almost 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
octopus,nautilus
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The fuse client gets almost all the .snap directory timestamps from it's parent. The exception is atime, which is kept to '0' (1970-01-01 00:00).

For consistency, atime should also be obtained from the parent directory.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #46186: octopus: client: fix snap directory atimeResolvedNathan CutlerActions
Copied to CephFS - Backport #46187: nautilus: client: fix snap directory atimeResolvedNathan CutlerActions
Actions #1

Updated by Luis Henriques almost 4 years ago

  • Pull request ID set to 33879
Actions #2

Updated by Patrick Donnelly almost 4 years ago

  • Status changed from New to Fix Under Review
  • Target version set to v16.0.0
  • Source set to Development
  • Backport set to octopus,nautilus
Actions #3

Updated by Patrick Donnelly almost 4 years ago

  • Subject changed from fix snap directory atime to client: fix snap directory atime
  • Status changed from Fix Under Review to Pending Backport
  • Component(FS) Client added
  • Component(FS) deleted (ceph-fuse)
Actions #4

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46186: octopus: client: fix snap directory atime added
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46187: nautilus: client: fix snap directory atime added
Actions #6

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF