client: fix snap directory atime

For consistency, also get the .snap directory atime from the parent
directory.  Otherwise, this timestamp will be kept at 1970-01-01.

Fixes: https://tracker.ceph.com/issues/46070
Signed-off-by: Luis Henriques <lhenriques@suse.com>